<resources>
    <string name="app_name">Random Joke</string>
    <string name="category_all">All Jokes</string>
    <string name="category_programming">Programming Jokes</string>
    <string name="category_favorite">Favorite Jokes</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="new_joke">New Joke</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_favorite_joke">Favorite Jokes List</string>
    <string name="joke">Joke</string>
    <string name="moved_favorites">Moved to Favorites</string>
    <string name="success_delete">Successfully deleted</string>
    <string name="wish_favorite">Wish to move this joke to favorites?</string>
    <string name="wish_delete">Wish to remove this joke from favorites?</string>
    <string name="empty_list">Empty List \n You need to add Jokes to Favorites</string>
</resources>