<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    android:id="@+id/layout_main_activity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/toolbarCor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu"
            android:backgroundTint="?attr/buttonCorFiltros"
            app:tint ="@color/green"
            android:id="@+id/image_button_menu"
            android:tooltipText="@string/title_favorite_joke"/>


        <ImageButton
            android:id="@+id/image_button_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="36dp"
            app:tint ="@color/green"
            android:backgroundTint="?attr/buttonCorFiltros"
            android:src="@drawable/ic_all"
            android:tooltipText="@string/category_all" />

        <ImageButton
            android:id="@+id/image_button_programming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="36dp"
            app:tint ="@color/green"
            android:backgroundTint="?attr/buttonCorFiltros"
            android:src="@drawable/ic_programming"
            android:tooltipText="@string/category_programming" />

        <ImageButton
            android:id="@+id/image_button_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:tint ="@color/green"
            android:backgroundTint="?attr/buttonCorFiltros"
            android:src="@drawable/ic_favorite"
            android:tooltipText="@string/category_favorite" />


    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/text_joke"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/joke"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="10dp"
        android:background="?attr/linhaCor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_joke" />

    <Button
        android:id="@+id/button_new_joke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/green"
        android:text="@string/new_joke"
        android:textColor="?attr/buttonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line" />

    <ImageButton
        android:id="@+id/image_button_add_to_favorite"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_add_to_favorites1"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/green"
        android:tooltipText="@string/add_to_favorite"
        app:tint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/line"
        app:layout_constraintStart_toEndOf="@+id/button_new_joke"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>